--- a/src/css/style.less
+++ b/src/css/style.less
@@ -1,4 +1,35 @@
 body {
-  background: #ECE9E6;
-  background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);
+// background: #232526;  /* fallback for old browsers */
+// background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
+// background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background-image: url("https://static.vecteezy.com/system/resources/previews/000/545/321/non_2x/3d-empty-studio-room-show-booth-for-designers-with-spotlight-on-black-gradient-background-vector.jpg");
 }
+
+#header{
+  color:  red;
+  font-size: 50px;
+  font-weight: bold;
+}
+
+#container-name{
+  color:white;
+}
+
+#search-button{
+  color:white;
+  font-weight: bold;
+}
+#search-icon{
+   position: relative;
+    z-index: 1;
+    left: -25px;
+    top: 10px;
+    color: #7B7B7B;
+    cursor:pointer;
+    width: 0;
+}
+
+#line-break{
+  color: white;
+}
+
