--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,8 @@
 body {
-background: #232526;
+/* background: #232526;
 background: -webkit-linear-gradient(to right, #414345, #232526);
-background: linear-gradient(to right, #414345, #232526);
+background: linear-gradient(to right, #414345, #232526); */
+background-image: url("https://www.wallpaperflare.com/static/799/289/145/disney-monsters-inc-pixar-animation-studios-movies-wallpaper.jpg");
 }
 
 #header{
@@ -10,9 +11,7 @@ background: linear-gradient(to right, #414345, #232526);
   font-weight: bold;
 }
 
-#container-name{
-  color:white;
-}
+
 
 #search-button{
   color:white;
